@@ -10,9 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Bazel caches
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: |
             ~/.cache/bazel
@@ -29,6 +29,8 @@ jobs:
           fi
           rm -rf /tmp/aspect/release
           bazel --bazelrc=.github/workflows/ci.bazelrc --bazelrc=.bazelrc run --config=release //release -- /tmp/aspect/release
+      - name: Prepare workspace snippet
+        run: envsubst < .github/workflows/release_notes.txt > release_notes.txt
       - name: Create GitHub draft release and upload artifacts
         uses: softprops/action-gh-release@v1
         with:
@@ -36,4 +38,4 @@ jobs:
           draft: true
           generate_release_notes: true
           files: /tmp/aspect/release/*
-          body_path: .github/workflows/release_notes.txt
+          body_path: release_notes.txt
